# Kahlus-V1

./: .gitignore  AGENTS.md  AGENT_RUNBOOK.md  CONDUCTOR.md  Dockerfile.a100  Dockerfile.a100.runtime  README.md  README_AGENT_DEPLOY.md  README_HANDOFF.md.in  README_KRISH_AGENT_NFC_A100.md.in  README_KTM_HANDOFF.md.in  README_KTM_RUN.md  README_RUN.md  environment-a100.yml  pyproject.toml
.conductor/: settings.toml
.githooks/: post-checkout  post-commit
.github/: copilot-instructions.md
docs/: A100_RUNBOOK.md  AUTORESEARCH_LOOP.md  BASELINES.md  CHAPMAN_A100_LAUNCH.md  CHAPMAN_A100_QUICKSTART.md  CLAIMS.md  CNAME  DATA.md  H100_RUNBOOK.md  LEAKAGE.md  LICENSE_REUSE.md  REPRODUCIBILITY.md  ROADMAP.md  RUNPOD_A100_REHEARSAL.md  conf.py  index.md  limitations.md  requirements.txt
examples/: GALLERY_HEADER.rst
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
requirements/: cluster-a100.txt
script/: build_and_run.sh
scripts/: _bootstrap.py  a100_krish_agent_autorun.sh.in  amrith_isolated_forecast_check.py  audit_eeg_v1_adaptation_checksums.py  audit_eeg_v1_baseline_checksums.py  audit_ktm_a100_evidence.py  audit_neurovisual_handoff_manifest.py  audit_neurovisual_local_manifest.py  audit_neurovisual_local_split.py  audit_neurovisual_registry_bundle.py  audit_neurovisual_requirement_coverage.py  bnci_isolated_forecast_check.py  build_labglass_index.py  build_neurovisual_dataset_registry.py  build_neurovisual_handoff_manifest.py  docker_a100_inner.sh  docker_gpu_preflight.py  docker_ktm_inner.sh  export_moabb_historical_window_evidence.py  fetch_chb_mit_smoke_subset.py  fetch_ds005620.py  fetch_kahlus_public_edf_datasets.py  fetch_nsrr.py  make_figures.py  make_tables.py  materialize_pair_operator_ablation_configs.py  package_a100_evidence_bundle.py  package_a100_evidence_bundle.sh  package_a100_handoff_zip.sh  package_a100_nfc_docker_handoff_zip.sh  package_kahlus_a100_7x_handoff.py  package_ktm_a100_handoff_zip.sh  package_ktm_evidence_bundle.py  package_ktm_runner_bundle.sh  package_neurovisual_local_evidence_bundle.py  package_run_bundle.sh  package_runner_bundle.sh  prepare_moabb_benchmark.sh  prepare_moabb_smoke.sh  prepare_multidataset_a100_evidence.sh  (+40 more)
tests/: artifact_helpers.py  forecast_eligibility_fixtures.py  test_adapters_moabb_bids.py  test_artifact_docs_contracts.py  test_artifact_evidence_bundle.py  test_artifact_handoff_zip.py  test_artifact_runner_bundle.py  test_baseline_runner.py  test_baseline_suite.py  test_baselines_and_architecture.py  test_cli_expanded.py  test_cli_report.py  test_cluster_preflight.py  test_config_repro_doctor.py  test_eval_audit_prepared.py  test_falsification.py  test_labglass_index.py  test_leakage_audits.py  (+13 more)
(+635 files in other folders)
