[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurotwin"
version = "0.1.0"
description = "Leakage-proof Neural Translation benchmark harness for multimodal neural-state modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "scikit-learn==1.8.0",
  "torch>=2.2",
  "typing_extensions>=4.5",
]

[project.optional-dependencies]
moabb = [
  "moabb>=1.1",
  "mne>=1.6",
]
bids = []
algonauts = [
  "h5py>=3.10",
]
h100 = []
cluster = [
  "h5py>=3.10",
  "edfio>=0.4",
]
dev = [
  "pytest>=8",
  "pillow>=10",
]
docs = [
  "sphinx>=7.4",
  "myst-parser>=3.0",
  "pydata-sphinx-theme>=0.15",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.6",
  "sphinx-gallery>=0.17",
  "numpydoc>=1.7",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "seaborn>=0.13",
]

[project.scripts]
nt = "neurotwin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
