[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurotwin"
version = "0.1.0"
description = "Leakage-proof Neural Translation benchmark harness for multimodal neural-state modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "scikit-learn==1.7.2",
  "torch>=2.2",
  "typing_extensions>=4.5",
]

[project.optional-dependencies]
moabb = [
  "moabb>=1.1",
  "mne>=1.6",
]
edf = [
  "edfio>=0.4.13",
]
bids = []
algonauts = [
  "h5py>=3.10",
]
h100 = []
cluster = [
  "edfio>=0.4.13",
  "h5py>=3.10",
]
dev = [
  "pytest>=8",
]
docs = [
  "matplotlib>=3.8",
  "sphinx>=7.4",
  "myst-parser>=3.0",
  "pydata-sphinx-theme>=0.15",
  "sphinx-copybutton>=0.5",
  "sphinx-autodoc-typehints>=2.0",
  "scipy>=1.11",
  "SciencePlots>=2.1",
]

[project.scripts]
nt = "neurotwin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
